--- a/tox.ini
+++ b/tox.ini
@@ -14,8 +14,7 @@ passenv =
     AWS_DEFAULT_REGION
 
 deps =
-    -rrequirements.txt
-    pytest
+    -rtest-requirements.txt
 commands =
     pytest
 
